ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds
  labels:
    tier: frontend  
spec:
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: quay.io/anshuk6469/nginx
