pingpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pingpod
spec:
  containers:
  - name: nginx
    image: quay.io/anshuk6469/nginxdemo
    ports:
    - containerPort: 80
    securityContext:
      capabilities:
        add: ["NET_RAW"]
