sapod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sapod
spec:
  serviceAccount: new
  containers:
    - name: task-pv-container
      image: quay.io/anshuk6469/nginx
      ports:
        - containerPort: 80
