secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret
spec:
  containers:
  - name: mysql
    image: quay.io/anshuk6469/mysql
