webapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
  - name: nginx
    image: quay.io/anshuk6469/mywebapp
    ports:
    - containerPort: 80
