np.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-np
spec:
  type: NodePort
  selector:
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
